# composer-json-modifier

./: Cargo.toml  README.md
data/: cloud-events.json
data/parse/modify/: remove.json
src/: composer_json.rs  fs.rs  main.rs  modify.rs  modify_composer_json.rs  parse_handler.rs
