[package]
name = "composer-json-modifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { Version = "4.3.23", features = ["derive"] }
serde = { Version = "1.0.188", features = ["derive"] }
serde_json = "1.0.80"
regex = "1.9.4"
